--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
-show_downloads: true
+title: Stuart Eiffert
+description: What I do.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
